--- a/src/css/section/__list-element/section__list-element.css
+++ b/src/css/section/__list-element/section__list-element.css
@@ -1,3 +1,8 @@
 .section__list-element {
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  align-items: baseline;
+  font-size: 1.2rem;
 }
