--- a/src/css/page/__photo/page__photo.css
+++ b/src/css/page/__photo/page__photo.css
@@ -1,4 +1,10 @@
 .page__photo {
-  width: 10rem;
+  width: 7.5rem;
   border-radius: 100%;
 }
+
+/* @media (max-width: 767px) {
+  .page__photo {
+    width: 
+  }
+} */
