--- a/src/css/section/section.css
+++ b/src/css/section/section.css
@@ -3,3 +3,4 @@
 @import url("./__list/section__list.css");
 @import url("./__paragraph/section__paragraph.css");
 @import url("./__title/section__title.css");
+@import url("./__list-text/section__list-text.css");
