--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,11 @@
 @import url("./vendor/reset.css");
 @import url("./vendor/normalize.css");
-@import url("./vendor/fonts.css");
+@import url("./assets/fonts/fonts.css");
 @import url("./styles/blocks/page.css");
 @import url("./styles/blocks/link.css");
 @import url("./styles/blocks/section-title.css");
 @import url("./styles/blocks/header.css");
 @import url("./styles/blocks/portfolio.css");
-
 @import url("./styles/blocks/stack.css");
 @import url("./styles/blocks/education.css");
 @import url("./styles/blocks/chapter.css");
